calendar spacing fix

--- a/components/ContactUsPage/IntroSection/IntroSection.module.css
+++ b/components/ContactUsPage/IntroSection/IntroSection.module.css
@@ -40,3 +40,8 @@
     border-radius: 10px 10px 0 0;
   }
 }
+
+.calendarSection{
+  padding: 0 !important ;
+  margin: 0 !important;
+}
